--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,49 @@
 /* https://piccalil.li/blog/a-modern-css-reset/ */
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Jost:wght@100;200;300;400;500;600;700;800;900&family=Lato:wght@100;300;400;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://api.fontshare.com/v2/css?f[]=clash-display@200,400,700,500,600,1,300&f[]=ranade@700,300,100,400,1,500&f[]=poppins@900,500,400,100,300,800,700,200,600&display=swap");
 
 :root {
   --primary-color: #ffffff;
   --second-color: #000000;
-  --bg-button-color: #ffffff;
 
-  --text-xs: 14px;
-  --text-sm: 1rem;
-  --text-base: 1.25rem;
-  --text-md: 24px;
-  --text-md-lg: 32px;
-  --text-lg: 36px;
-  --text-xl: 48px;
-  --text-2xl: 64px;
-  --text-3xl: 84px;
+  --max-width-wrapper: 1440px;
+
+  /* 1 : Biggest - 5: Lowest */
+  --fs-header-1: clamp(3.2rem, calc(-3.3rem + 12.22vw), 6.88rem);
+  /* clamp(2.31rem, calc(-2.60rem + 11.41vw), 6.88rem) */
+  --fs-header-2: clamp(2.25rem, calc(1.42rem + 2.22vw), 3rem);
+  --fs-header-3: clamp(1rem, calc(0.72rem + 0.74vw), 1.25rem);
+
+  --fs-para-1: clamp(1rem, calc(0.42rem + 0.74vw), 1.25rem);
+  --fs-para-2: clamp(0.94rem, calc(0.9rem + 0.14vw), 1rem);
+  --fs-para-3: clamp(0.81rem, calc(0.41rem + 0.83vw), 1rem);
+
+  --linear-bg-title: linear-gradient(90deg, #baf58c 45.37%, #94f595 97.31%);
+  --radial-bg: -webkit-radial-gradient(
+    53.29% 65.89% at 37.33% 23.56%,
+    #000000 0%,
+    #3a3124 100%
+  );
+
+  /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
+}
+/* 
+  font-family: 'Clash Display', sans-serif;
+  font-family: 'Ranade', sans-serif;
+  font-family: 'Poppins', sans-serif; 
+  */
+* {
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+  background-color: #000000;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Clash Display", sans-serif;
+}
+
+p {
+  font-family: "Poppins", sans-serif;
 }
